--- a/styles/denuncie.css
+++ b/styles/denuncie.css
@@ -37,6 +37,12 @@ ul{
     display: flex;
     flex-flow: row wrap;
 }
+h1{
+    font-size: 40px;
+    position: absolute;
+    top: 12%;
+    left: 7%;
+}
 .logo{
     font-size:50px;
     text-transform:uppercase;
@@ -45,5 +51,104 @@ ul{
     left: 5%;
     top: -1%;
     cursor: pointer;
+    font-weight: bold;
+}
+section{
+    background-color: rgba(0, 0, 0, 0.8);
+    position: fixed ;
+    top: 53%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 200px;
+    border-radius: 40px;
+    color: rgb(255, 240, 252);
+    text-align: center;
+    
+}
+[id = "input1"]{
+    background-color: black;
+    color: aliceblue;
+    font-weight: bold;
+    font-style: italic;
+    border-radius: 10px;
+    height: 30px;
+    width: 300px;
+    position: absolute;
+    top: 21%;
+    left: 35%;
+    outline: none;
+    border: none;
+}
+[id = "input2"]{
+    background-color: rgb(148, 28, 128);
+    color: aliceblue;
+    font-weight: bold;
+    font-style: italic;
+    border-radius: 5px;
+    height: 40px;
+    width: 130px;
+    position: absolute;
+    top: 77%;
+    left: 43%;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    
+    
+}
+
+@media (max-width: 783px){
+    section{
+        padding: 40%;
+        
+
+    }
+    textarea{
+        padding: 1%;
+    }
+    h1{
+        padding: 2%;
+        width: 80%;
+        position: absolute;
+        top: 11%;
+        left: 9%;
+        font-size: 25px;
+    }
+
+    p{
+        padding: 2%;
+        width: 80%;
+        position: absolute;
+        top: 30%;
+        left: -1%;
+        font-size: 20px;
+    }
+
+    [id = "input1"]{
+        position: absolute;
+        top: 15%;
+    }
+     
+}
+
+
+@media (max-width: 1800px){
+    [id = "input1"]{
+        position: absolute;
+        top: 25%;
+    }
+}
+
+
+textarea{
+    background-color: black;
+    color: aliceblue;
+    outline: none;
+    border: none;
+    resize: none;
+    border-radius: 10px;
+}
+p{
+    font-size: 35px;
     font-weight: bold;
 }
