--- a/styles/metis.css
+++ b/styles/metis.css
@@ -51,7 +51,7 @@ button{
 
 
 
-@media (max-width: 100px){
+@media (max-width: 1500px){
 
     .btn1{
         position: absolute;
@@ -94,7 +94,7 @@ button{
 
 .tela1{
     color: aliceblue;
-    font-size: 60px;
+    font-size: 75px;
     display: flex;
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -103,6 +103,8 @@ button{
     left: 51%;
     top: 10%;
     transform: translate(-50%, -50%);
+    font-style: italic;
+    text-decoration: underline;
 
 
 
