--- a/styles/denuncie.css
+++ b/styles/denuncie.css
@@ -32,7 +32,9 @@ nav{
     background: rgb(133, 25, 133);
     height: 5vh;
 }
-
+li{
+    list-style-type: none;
+}
 ul{
     display: flex;
     flex-flow: row wrap;
@@ -42,6 +44,12 @@ h1{
     position: absolute;
     top: 12%;
     left: 7%;
+    color: black;
+}
+p{
+    font-size: 35px;
+    font-weight: bold;
+    color: black;
 }
 .logo{
     font-size:50px;
@@ -54,7 +62,7 @@ h1{
     font-weight: bold;
 }
 section{
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(255, 255, 255, 0.2);
     position: fixed ;
     top: 53%;
     left: 50%;
@@ -112,7 +120,7 @@ section{
         position: absolute;
         top: 11%;
         left: 9%;
-        font-size: 25px;
+        font-size: 20px;
     }
 
     p{
@@ -120,7 +128,7 @@ section{
         width: 80%;
         position: absolute;
         top: 30%;
-        left: -1%;
+        left: 9%;
         font-size: 20px;
     }
 
@@ -147,8 +155,4 @@ textarea{
     border: none;
     resize: none;
     border-radius: 10px;
-}
-p{
-    font-size: 35px;
-    font-weight: bold;
 }
