--- a/styles/registro.css
+++ b/styles/registro.css
@@ -48,28 +48,102 @@ body{
     cursor: pointer;
 }
 div{
-    background-color: rgba(180, 29, 175, 70);
+    background-color: rgba(121, 12, 139, 70);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 200px;
+    padding: 160px;
     border-radius: 40px;
     color: rgb(255, 240, 252);
     
 
 }
-input.usuario1{
+.usuario{
     background-color: black;
     position: absolute;
-    top: 50%;
-    left: 67%;
+    top: 22%;
+    left: 50%;
     transform: translate(-50%, -50%);
+    width: 200px;
+    height: 30px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    color: aliceblue;
+}
+.email{
+    background-color: black;
+    position: absolute;
+    top: 38%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 30px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    color: aliceblue;
+}
+
+.senha{
+    background-color: black;
+    position: absolute;
+    top: 54%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 30px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    color: aliceblue;
+}
+.confirmar{
+    background-color: black;
+    position: absolute;
+    top: 72%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 30px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    color: aliceblue;
+}
+.pnome{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 15%;
+    left: 62%;
+    width: 100%;
+}
+.pemail{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 30%;
+    left: 70%;
+    width: 100%;
 }
 p{
     color: black;
     font-style: italic;
-    font-size: 28px;
-    align-items: center;
-    
+    font-size: 32px;
+    font-weight: bold;
+}
+button{
+    font-size: 20px;
+    background-color: rgb(46, 148, 173);
+    border: none;
+    border-radius: 5px;
+    padding: 20px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 87%;
+    left: 50%;
+    color: rgba(250, 250, 250, 70);
+    cursor: pointer;
+
+
 }
