--- a/styles/registro.css
+++ b/styles/registro.css
@@ -68,7 +68,11 @@ div{
     width: 200px;
     height: 30px;
     border-radius: 10px;
-    
+    border-style: solid;
+    border-bottom-width: 4px;
+    border-top-width: 0;
+    border-right-width: 0;
+    border-left-width: 0;
     outline: none;
     color: rgb(0, 0, 0);
 }
@@ -81,7 +85,11 @@ div{
     width: 200px;
     height: 30px;
     border-radius: 10px;
-    
+    border-style: solid;
+    border-bottom-width: 4px;
+    border-top-width: 0;
+    border-right-width: 0;
+    border-left-width: 0;
     outline: none;
     color: rgb(0, 0, 0);
 }
@@ -95,7 +103,11 @@ div{
     width: 200px;
     height: 30px;
     border-radius: 10px;
-    
+    border-style: solid;
+    border-bottom-width: 4px;
+    border-top-width: 0;
+    border-right-width: 0;
+    border-left-width: 0;
     outline: none;
     color: rgb(0, 0, 0);
 }
@@ -108,7 +120,12 @@ div{
     width: 200px;
     height: 30px;
     border-radius: 10px;
-    
+    border-style: solid;
+    border-bottom-width: 4px;
+    border-top-width: 0;
+    border-right-width: 0;
+    border-left-width: 0;
+        
     outline: none;
     color: rgb(0, 0, 0);
 }
@@ -132,7 +149,7 @@ p{
     font-size: 32px;
     font-weight: bold;
 }
-button{
+[id = button]{
     font-size: 20px;
     background-color: rgba(77, 58, 58, 0.7);
     border: none;
