--- a/styles/denuncie.css
+++ b/styles/denuncie.css
@@ -76,9 +76,12 @@ section{
 [id = "input1"]{
     background-color: rgba(250, 252, 247, 1);
     color: rgb(5, 5, 5);
-    font-weight: bold;
+    
     font-style: italic;
-    border-radius: 10px;
+    border-bottom: 1px solid  ;
+    border-top: none;
+    border-left: none;
+    border-right: none;
     height: 30px;
     width: 300px;
     position: absolute;
@@ -155,6 +158,7 @@ textarea{
     outline: none;
     border: 1;
     resize: none;
-    border-radius: 10px;
+    border-top: none;
+    border-bottom: none;;
     font-size: 16px;
 }
