--- a/styles/registro.css
+++ b/styles/registro.css
@@ -67,12 +67,10 @@ div{
     transform: translate(-50%, -50%);
     width: 200px;
     height: 30px;
-    border-radius: 10px;
-    border-style: solid;
-    border-bottom-width: 4px;
-    border-top-width: 0;
-    border-right-width: 0;
-    border-left-width: 0;
+    border-bottom: 1px solid  ;
+    border-top: none;
+    border-left: none;
+    border-right: none;
     outline: none;
     color: rgb(0, 0, 0);
 }
@@ -84,12 +82,10 @@ div{
     transform: translate(-50%, -50%);
     width: 200px;
     height: 30px;
-    border-radius: 10px;
-    border-style: solid;
-    border-bottom-width: 4px;
-    border-top-width: 0;
-    border-right-width: 0;
-    border-left-width: 0;
+    border-bottom: 1px solid  ;
+    border-top: none;
+    border-left: none;
+    border-right: none;
     outline: none;
     color: rgb(0, 0, 0);
 }
@@ -102,12 +98,10 @@ div{
     transform: translate(-50%, -50%);
     width: 200px;
     height: 30px;
-    border-radius: 10px;
-    border-style: solid;
-    border-bottom-width: 4px;
-    border-top-width: 0;
-    border-right-width: 0;
-    border-left-width: 0;
+    border-bottom: 1px solid  ;
+    border-top: none;
+    border-left: none;
+    border-right: none;
     outline: none;
     color: rgb(0, 0, 0);
 }
@@ -119,12 +113,10 @@ div{
     transform: translate(-50%, -50%);
     width: 200px;
     height: 30px;
-    border-radius: 10px;
-    border-style: solid;
-    border-bottom-width: 4px;
-    border-top-width: 0;
-    border-right-width: 0;
-    border-left-width: 0;
+    border-bottom: 1px solid  ;
+    border-top: none;
+    border-left: none;
+    border-right: none;
         
     outline: none;
     color: rgb(0, 0, 0);
