--- a/styles/sobrenos.css
+++ b/styles/sobrenos.css
@@ -21,9 +21,9 @@ nav{
     justify-content: space-around;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
-    background: rgb(133, 25, 133);
-    height: 5vh;
-    opacity: 1;
+    background: rgb(224, 221, 224);
+    height: 8vh;
+   
     
 }
 
@@ -36,16 +36,19 @@ li{
 }
 
 body{
-    background-image: linear-gradient(to right, purple, rgb(100, 127, 168));
+    background-color: rgb(100, 127, 168);
     font-family: Arial, Helvetica, sans-serif;
+    
+}
+    
    
 
   
 
-}
+
 h1{
     position: absolute;
-    top: 25%;
+    top: 18%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 60px;
@@ -57,18 +60,54 @@ span{
 font-size:200%; 
 color:rgb(0, 0, 0);
 }
-img{
-    margin-top: -10%;
+.programadorImg{
+    height: 1300px;
+    width: 1700px;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    opacity: 0.05;
     
-   
-    margin-left: 10%;
-    position: fixed;
-    opacity: 0.020;
+    top: 51%;
+    left: 50%;
 }
-p{
+img {
+    width: 20px;
+    margin-left: 32px;
+    }
+.text1{
     text-align: center;
     position: absolute;
-    top: 59%;
+    top: 37%;
+    left: 51%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+    font-weight: bold;
+
+}
+.colaborar{
+    position: absolute;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    top: 69%;
+    left: 50%;
+    font-weight: bold;
+    font-size: 57px;
+}
+.text2{
+    text-align: center;
+    position: absolute;
+    top: 56%;
+    left: 51%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+    font-weight: bold;
+
+}
+.text3{
+    text-align: center;
+    position: absolute;
+    top: 90%;
     left: 51%;
     transform: translate(-50%, -50%);
     font-size: 30px;
@@ -106,7 +145,40 @@ p{
     letter-spacing:4px;
     position: absolute;
     left: 5%;
-    top: -1%;
+    top: 1%;
     cursor: pointer;
     font-weight: bold;
+}
+footer{
+    position: absolute;
+    top: 110%;
+    left: 0%;
+    width: 100%;
+ }
+[id = abaixo]{
+     display: flex;
+     justify-content: space-around;
+     
+     font-family: Arial, Helvetica, sans-serif;
+     background: rgb(224, 221, 224);
+     height: 12vh;
+     
+} 
+.titlefoot2{
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    position: absolute;
+    left: 35%;
+    top: 41%;
+    position: absolute;
+} 
+.tituloCeap{
+    font-size: 25px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    position: absolute;
+    left: 60%;
+    top: 36%;
+    
 }
