--- a/styles/metis.css
+++ b/styles/metis.css
@@ -19,9 +19,17 @@ body{
     background-color: rgb(100, 127, 168);
     
 }
-.altura{
-    height: 100%;
+[id = "container"]{
+    display: grid;
+    text-align: center;
+    justify-content: center;
 }
+[id = "content"]{
+    display: grid;
+    justify-content: center;
+    
+}
+
 .imagem12{
     height: 900px;
     width: 1000px;
@@ -53,7 +61,7 @@ button :hover{
 
 
 
-
+/* 
 @media (max-width: 1400px){
 
     .btn1{
@@ -94,9 +102,9 @@ button :hover{
 
         
         
-    }
+    } */
 
-.tela1{
+.H1{
     color: rgb(247, 247, 247);
     font-size: 90px;
     display: flex;
@@ -111,24 +119,8 @@ button :hover{
    
 
 }
-.textomain {
-    color: rgb(247, 247, 247);
-    font-size: 53px;
-    display: flex;
-    justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    position: absolute;
-    left: 28%;
-    top: 49%;
-    transform: translate(-50%, -50%);
-    font-style: italic;
-    width: 39%  ;
-   
 
-}
-
-.titlefoot2{
+.tituloSobre{
     font-size: 18px;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -153,10 +145,88 @@ button :hover{
     text-transform:uppercase;
     letter-spacing:4px;
     position: absolute;
-    left: 12%;
+    left: 13%;
     top: 22px;
+    
 }
-nav{
+.menu{
+    visibility: hidden;
+}
+@media (max-width: 500px){
+    .nav-site{
+        visibility: hidden;
+    }
+    .imagemS{
+        visibility: hidden;
+    }
+    input{
+        visibility: hidden;
+    }
+    .searchText{
+        visibility: hidden;
+    }
+    .tituloLogin{
+        visibility: hidden;
+    }
+    .tituloSuporte{
+        visibility: hidden;
+    }
+    .logo{
+        left: 50%;
+    }
+    .menu{
+        
+        visibility: visible;
+        list-style:none;
+        border:1px solid #c0c0c0;
+        float:left;
+        display: grid;
+        justify-content: space-around;
+        align-items: center;
+        font-family: Arial, Helvetica, sans-serif;
+        background: rgb(224, 221, 224);
+        height: 8vh;
+        width: 100%;
+        
+    }
+   
+    .menu li{
+        position:relative;
+        float:left;
+        border-right:1px solid #c0c0c0;
+    }
+    .menu li a{color:#333; text-decoration:none; padding:5px 10px; display:block;}
+
+    .menu li a:hover{
+    background:#333;
+    color:#fff;
+    -moz-box-shadow:0 3px 10px 0 #CCC;
+    -webkit-box-shadow:0 3px 10px 0 #ccc;
+    text-shadow:0px 0px 5px #fff;
+    }
+    .menu li:hover ul, .menu li.over ul{display:block;}
+    
+    .menu li ul li{
+        border:1px solid #c0c0c0;
+        display:block;
+        width:150px;
+        }
+
+    .menu li  ul{
+        position:absolute;
+        top:25px;
+        left:0;
+        background-color:#fff;
+        display:none;
+        }
+    .nav-menu{
+        display: block;
+
+    }
+}
+
+.nav-site{
+    
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -166,7 +236,7 @@ nav{
     width: 100%;
     
 }
-ul{
+ul .nav-list{
     display: flex;
     flex-flow: row wrap;
 }
@@ -179,14 +249,31 @@ footer{
    left: 0%;
    width: 100%;
 }
- [id = abaixo]{
+.imgInsta{
+    position: absolute;
+    left: 47%;
+    top: 39%;
+}
+.imgFB{
+    position: absolute;
+    left: 49%;
+    top: 39%;
+}
+.imgSup{
+    position: absolute;
+    left: 51%;
+    top: 40%;
+}
+ [id = foot-content]{
     display: flex;
-    justify-content: space-around;
+    
     
     font-family: Arial, Helvetica, sans-serif;
     background: rgb(224, 221, 224);
     height: 12vh;
+    justify-content: center;
     
+
 } 
 [id = lupin]{
     transform: translate(-50%, -50%);
@@ -215,7 +302,7 @@ footer{
     display: flex;
     
 }
-[id = "putin"]{
+[id = "inputSearch"]{
     color: #e2dada;
     border: none;
     font-style: italic;
@@ -232,32 +319,104 @@ footer{
 [id = "lupa"]{
     height: 20px;
     width: 20px;
+    position: absolute;
+    left: 92%;
+    top: 30%;
     
 }
-.imagemS{
+
+.menu-dropdown {   
+    display: flex;
+    align-items: center;
+    margin: 0;
+    list-style-type: none;
+    
+}
+.menu-dropdown .md-item{  
+    position: relative;   
+    
+}
+.menu-dropdown .md-item:hover{ /* efeito hover nos itens do menu principal */
+    background-color:rgb(224, 221, 224);
+    transition: 1s;
+}
+.menu-dropdown .md-item a{
+    color: rgb(0, 0, 0); 
+    padding: 26px;
+    text-decoration: none;
+    display: flex;
+    visibility: hidden;
+}
+.submenu-dropdown{
+    display: none; /* esconde o submenu dropdown */
+    position: absolute;
+    width:100%;  
+    
+}
+.sd-item:hover .submenu-dropdown{
+    display: flex;  
+}
+.submenu-dropdown .sd-item{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    left: 0;
+    top: 100%;
+    width: 100%;
+ }
+.submenu-dropdown .sd-item a{
+    width:100%;
+    min-width: 100px;
+    padding:20px;
+    background-color: rgb(224, 221, 224);
+    color: rgb(0, 0, 0); 
+    visibility: visible;
+    font-weight: bold;
+}
+
+.menu-dropdown .md-item:hover .submenu-dropdown{   /*efeito hover para alterar a cor de fundo*/
+    background-color: rgb(224, 221, 224);
+    display: flex; /* exibir o submenu dropdown */
+    
+}
+.imagemH{
     transform: translate(-50%, -50%);
     position: absolute;
     left: 2%;
     top: 4%;
     position: absolute;
+     visibility: hidden; 
+    cursor: pointer;
 }
-.imagemF{
+.imagemS:hover{
+    content: "Voce nao tem mensagens";
+
+}
+.imagemS{
     transform: translate(-50%, -50%);
     position: absolute;
-    left: 7%;
+    left: 22%;
     top: 4%;
     position: absolute;
     cursor: pointer;
 }
 
 
-
-.titlenav3{
+.tituloSuporte{
     font-size: 14px;
     text-transform: uppercase;
     letter-spacing: 4px;
     position: absolute;
-    left: 95%;
+    left: 94%;
+    top: 29px;
+    position: absolute;
+}
+.tituloLogin{
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    position: absolute;
+    left: 88%;
     top: 29px;
     position: absolute;
 }
@@ -276,7 +435,7 @@ footer{
 
 img {
     width: 20px;
-    margin-left: 32px;
+    
     }
 
 ul{
