--- a/styles/login.css
+++ b/styles/login.css
@@ -18,7 +18,7 @@ a:hover {
 
 nav{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     background: rgba(224, 221, 224, 1.0);
@@ -30,117 +30,63 @@ ul{
     flex-flow: row wrap;
 }
 .logo{
-    font-size:50px;
+    font-size:32px;
     text-transform:uppercase;
     letter-spacing:4px;
-    position: absolute;
-    left: 5%;
-    top: 8px;
-    cursor: pointer;
 }
 body{
-    background-color: rgb(100, 127, 168);
-    font-family: Arial, Helvetica, sans-serif;
-   
-
-  
-
-}
-.imglogin{
-    height: 1000px;
-    width: 1000px;
-    transform: translate(-50%, -50%);
-    position: fixed;
-    opacity: 0.05;
-
-    top: 52%;
-    left: 45%;
-    
+    background-image: linear-gradient( to right, rgb(136, 45, 211), rgb(158, 120, 194) );
+    font-family: sans-serif;
 }
 
-div{
-    background-color: rgba( 227, 234, 224, 51);
-    position: fixed;
-    top: 50%;
-    left: 80%;
-    transform: translate(-50%, -50%);
-    border-radius: 3px;
-    color: rgb(255, 240, 252);
-    padding: 110px;
-
+li{
+    list-style-type: none;
 }
-@media (max-width: 1200px){
-    p{
-        visibility: hidden;
-        
-    }
-    
-    div{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-    
-
-   
+#container{
+    display: grid;
+    align-items: center;
+    justify-content: space-around;
 }
+#box_login{
+    display: flex;
+    background-color: rgb(232, 234, 236);
+    margin-top: 60%;
+    padding: 70px;
+    height: 300px;
+    justify-items: center;
+}
+
 input{
-    height: 50px;
-    border-radius: 5px;
-    border: none;
-    background-color: rgb(255, 255, 255);
-    color: rgb(8, 8, 8);
     outline: none;
-}
-button{
     border: none;
-    border-radius: 5px;
-    padding: 20px;
-    width: 100%;
-    background-color: black;
-    color: aliceblue;
+    height: 60px;
+    width: 240px;
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+}
+input:focus{
+    background-color: rgb(255, 255, 255);
+}
+.text_login{
+    font-size: 32px;
+    font-weight: 700;
+    margin-left: 30%;
+}
+.btEnviar_login{
+    font-size: 18px;
     cursor: pointer;
-}   
-h1{
-    color: black;
+}
+span{
+    font-weight: 600;
+    cursor: pointer;
+}
+span:hover{
+    color: rgb(91, 91, 211);
 }
 p{
-    position: absolute;
-    top: 31%;
-    left: 4%;
-    font-size: 60px;
-    font-style: italic;
-    font-weight: 800;
-    color: rgb(0, 0, 0);
- 
-}
-
-.seta{
-    margin-left: 10%;
-    margin-top: 10%;
-}
-
-
-footer{
-    position: fixed;
-    top: 66%;
-    left: 81%;
-    font-size: 15px;
-    font-style: italic;
-    font-weight: 800;
-}
-
-
-footer :hover{
-    color: #5f5fd3;
-}
-    
-.nt1{
-    position: fixed;
-    top: 66%;
-    left: 74%;
-    font-size: 15px;
-    font-style: italic;
-    font-weight: 800;
+    font-size: 10px;
+    margin-left: 7%;
+    margin-top: 1%;
 }
