--- a/styles/metis.css
+++ b/styles/metis.css
@@ -4,10 +4,23 @@
     padding: 0;
 }
 
-a{
+#nav-site a{
+    color: rgb(109, 19, 117);
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 18px;
+    font-family: sans-serif;
+    text-transform:uppercase;
+    letter-spacing:4px;
+}
+#foot-content a{
     color: rgb(0, 0, 0);
     text-decoration: none;
     transition: 0.3s;
+    font-size: 24px;
+    font-family: sans-serif;
+    text-transform:uppercase;
+    letter-spacing:4px;
 }
 
 a:hover {
@@ -15,430 +28,155 @@ a:hover {
 
 
 }
-body{
-    background-color: rgb(100, 127, 168);
-    
-}
-[id = "container"]{
-    display: grid;
-    text-align: center;
-    justify-content: center;
-}
-[id = "content"]{
-    display: grid;
-    justify-content: center;
-    
-}
-
-.imagem12{
-    height: 900px;
-    width: 1000px;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    
-    
-    top: 51%;
-    left: 50%;
-    
-}
-button{
-    background-color: rgba(77, 58, 58, 0.6);
-    font-family: Arial, Helvetica, sans-serif;
+#nav-site .logo{
     font-size: 30px;
-    position: absolute;
-    top: 90%;
-    left: 51%;
-    color: rgb(243, 243, 243);    
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
+    margin-left: -10%;
 }
-button :hover{
-    background-color:  rgb(rgb(0, 0, 0), rgb(0, 0, 0), rgb(0, 0, 0))
+body{
+    background-position: 20%;
 }
-
-
-
-/* 
-@media (max-width: 1400px){
-
-    .btn1{
-        position: absolute;
-        top: 90%;
-        left: 51%;
-        }
-    .logo{
-        margin-left: -5%;
-    } 
-    .imagemS{
-        visibility: hidden;
-    }
-    .imagemF{
-        visibility: hidden;
-    }
-    .imagemE{
-        margin-left: -2%;
-    }
-    input{
-        margin: auto;
-        width: 100px;
-    }
-    .titlenav1{
-    
-        visibility: hidden;
-    }
-    .titlenav2{
-        visibility: hidden;
-    }
-    .titlenav3{
-        margin-left: 1%;
-    }
-    .imagem12{
-        top: 49%;
-        left: 45%;
-    }
-
-        
-        
-    } */
-
-.H1{
-    color: rgb(247, 247, 247);
-    font-size: 90px;
-    display: flex;
-    justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-top: 20px;
-    position: absolute;
-    left: 50%;
-    top: 13%;
-    transform: translate(-50%, -50%);
-    font-style: italic;
-   
-
-}
-
-.tituloSobre{
-    font-size: 18px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    position: absolute;
-    left: 35%;
-    top: 41%;
-    position: absolute;
-} 
-.tituloCeap{
-    font-size: 25px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    position: absolute;
-    left: 60%;
-    top: 36%;
-    
-}
-
-
-.logo{
-    font-size:24px;
-    text-transform:uppercase;
-    letter-spacing:4px;
-    position: absolute;
-    left: 13%;
-    top: 22px;
-    
-}
-.menu{
-    visibility: hidden;
-}
-@media (max-width: 500px){
-    .nav-site{
-        visibility: hidden;
-    }
-    .imagemS{
-        visibility: hidden;
-    }
-    input{
-        visibility: hidden;
-    }
-    .searchText{
-        visibility: hidden;
-    }
-    .tituloLogin{
-        visibility: hidden;
-    }
-    .tituloSuporte{
-        visibility: hidden;
-    }
-    .logo{
-        left: 50%;
-    }
-    .menu{
-        
-        visibility: visible;
-        list-style:none;
-        border:1px solid #c0c0c0;
-        float:left;
-        display: grid;
-        justify-content: space-around;
-        align-items: center;
-        font-family: Arial, Helvetica, sans-serif;
-        background: rgb(224, 221, 224);
-        height: 8vh;
-        width: 100%;
-        
-    }
-   
-    .menu li{
-        position:relative;
-        float:left;
-        border-right:1px solid #c0c0c0;
-    }
-    .menu li a{color:#333; text-decoration:none; padding:5px 10px; display:block;}
-
-    .menu li a:hover{
-    background:#333;
-    color:#fff;
-    -moz-box-shadow:0 3px 10px 0 #CCC;
-    -webkit-box-shadow:0 3px 10px 0 #ccc;
-    text-shadow:0px 0px 5px #fff;
-    }
-    .menu li:hover ul, .menu li.over ul{display:block;}
-    
-    .menu li ul li{
-        border:1px solid #c0c0c0;
-        display:block;
-        width:150px;
-        }
-
-    .menu li  ul{
-        position:absolute;
-        top:25px;
-        left:0;
-        background-color:#fff;
-        display:none;
-        }
-    .nav-menu{
-        display: block;
-
-    }
-}
-
-.nav-site{
-    
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
-    background: rgb(224, 221, 224);
-    height: 8vh;
-    width: 100%;
-    
-}
-ul .nav-list{
-    display: flex;
-    flex-flow: row wrap;
-}
-li{
-    list-style-type: none;
-}
-footer{
-   position: absolute;
-   top: 110%;
-   left: 0%;
+.container{
+   display: flex;
+   align-items: center;
    width: 100%;
 }
-.imgInsta{
-    position: absolute;
-    left: 47%;
-    top: 39%;
-}
-.imgFB{
-    position: absolute;
-    left: 49%;
-    top: 39%;
-}
-.imgSup{
-    position: absolute;
-    left: 51%;
-    top: 40%;
-}
- [id = foot-content]{
-    display: flex;
-    
-    
-    font-family: Arial, Helvetica, sans-serif;
-    background: rgb(224, 221, 224);
-    height: 12vh;
-    justify-content: center;
-    
-
-} 
-[id = lupin]{
-    transform: translate(-50%, -50%);
-    position: absolute;
-    left:1117px;
-    top: 34px;
-    border: none;
-    border-radius: 200px;
-    padding: 5px;
-    cursor: pointer;
-    font-size: 15px;
-    height: 25px;
-    width: 25px;
-}
-.searchText{
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    top: 4%;
-    height: 45px;
-    width: 370px;
-    border-radius: 15px;
-    background-color: rgba(77, 58, 58, 0.5);
-    align-items: center;
-    justify-content: space-between;
-    display: flex;
-    
-}
-[id = "inputSearch"]{
-    color: #e2dada;
-    border: none;
-    font-style: italic;
-    font-weight: bold;
-    outline: none; 
-    background: none;
-    width: 100%;
-    padding: 0;
-    line-height: 40px;
-    font-size: 16px;
-    
-    
-}
-[id = "lupa"]{
-    height: 20px;
-    width: 20px;
-    position: absolute;
-    left: 92%;
-    top: 30%;
-    
-}
-
-.menu-dropdown {   
+#nav-site{
     display: flex;
     align-items: center;
-    margin: 0;
-    list-style-type: none;
-    
+    justify-content: space-around;
+    background-color: rgb(240, 233, 233);
+    height: 8vh;
+    grid-area: n;
 }
-.menu-dropdown .md-item{  
-    position: relative;   
-    
-}
-.menu-dropdown .md-item:hover{ /* efeito hover nos itens do menu principal */
-    background-color:rgb(224, 221, 224);
-    transition: 1s;
-}
-.menu-dropdown .md-item a{
-    color: rgb(0, 0, 0); 
-    padding: 26px;
-    text-decoration: none;
-    display: flex;
-    visibility: hidden;
-}
-.submenu-dropdown{
-    display: none; /* esconde o submenu dropdown */
-    position: absolute;
-    width:100%;  
-    
-}
-.sd-item:hover .submenu-dropdown{
-    display: flex;  
-}
-.submenu-dropdown .sd-item{
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    left: 0;
-    top: 100%;
+#content{
+    background-image: url(../imgs/imgFundo.png);
     width: 100%;
- }
-.submenu-dropdown .sd-item a{
-    width:100%;
-    min-width: 100px;
-    padding:20px;
-    background-color: rgb(224, 221, 224);
-    color: rgb(0, 0, 0); 
-    visibility: visible;
-    font-weight: bold;
-}
-
-.menu-dropdown .md-item:hover .submenu-dropdown{   /*efeito hover para alterar a cor de fundo*/
-    background-color: rgb(224, 221, 224);
-    display: flex; /* exibir o submenu dropdown */
-    
-}
-.imagemH{
-    transform: translate(-50%, -50%);
-    position: absolute;
-    left: 2%;
-    top: 4%;
-    position: absolute;
-     visibility: hidden; 
-    cursor: pointer;
-}
-.imagemS:hover{
-    content: "Voce nao tem mensagens";
-
-}
-.imagemS{
-    transform: translate(-50%, -50%);
-    position: absolute;
-    left: 22%;
-    top: 4%;
-    position: absolute;
-    cursor: pointer;
-}
-
-
-.tituloSuporte{
-    font-size: 14px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    position: absolute;
-    left: 94%;
-    top: 29px;
-    position: absolute;
-}
-.tituloLogin{
-    font-size: 14px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    position: absolute;
-    left: 88%;
-    top: 29px;
-    position: absolute;
+    height: 100vh;
+    display: flex;
 }
 .nav-list{
-    list-style: none;
-    margin-left: flex;
-}
-.nav-list li{
-
-    
-
-    margin-left: 50px;
-    
-   
-}
-
-img {
-    width: 20px;
-    
-    }
-
-ul{
     display: flex;
-    flex-flow: row wrap;
+    
+}
+.imagemS{
+    height: 20px;
+    width: 20px;
+    visibility: hidden;
+}
+.imagemH{
+    height: 20px;
+    width: 20px;
+    visibility: hidden;
+}
+.tituloRegistro{
+    margin-left: 200%;
+    margin-top: 6%;
+}
+.tituloRegistro:hover{
+    text-decoration: underline;
+}
+.tituloSuporte{
+    margin-left: 300%;
+    margin-top: 7%;
+}
+.tituloSuporte:hover{
+    text-decoration: underline;
+}
+img{
+    height: 20px;
+    width: 20px;
+}
+li{
+    list-style-type: none;    
+}
+#foot-content{
+    display: flex;
+    background-color: rgb(240, 233, 233);
+    height: 10vh;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 10%;
+}
+#searchText{
+    background-color: rgb(151, 112, 189);
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-radius: 15px;
+    width: 400px;
+    visibility: hidden;
+}
+.inputSearch{
+    background: none;
+    border: none;
+    width: 90%;
+    outline: none;
+}
+.imgLupa{
+    margin-left: 100%;
+}
+.iconeInstagram{
+    margin-left: -80%;
+}
+.iconeFacebook{
+    margin-left: -20%;
+}
+.iconeSuporte{
+    margin-left: 50%;
+    margin-top: 50%;
+}
+#foot-images{
+    justify-content: space-between;
+    display: flex;
+}
+
+.textoMain{
+    color: aliceblue;
+    font-size: 50px;
+    font-family: sans-serif;
+    font-weight: 400;
+    text-decoration: none;
+    margin-top: 20%;
+    margin-left: 9%;
+    width: 70%;
+}
+.legendaMain{
+    color: aliceblue;
+    font-size: 26px;
+    font-family: sans-serif;
+    font-weight: 400;
+    text-decoration: none;
+    margin-left: 9%;
+    width: 70%;
+}
+/*----------------------------------------------------------------PAGINA 2-------------------------------------------------------------------*/
+
+
+#panel_sec{
+    display: flex;
+
+}
+.imagem_fundo2{
+    height: 700px;
+    width: 800px;
+    margin-top: 40%;
+    margin-left: 5%;
+}
+.text_panel{
+    font-size: 40px;
+    font-family: sans-serif;
+    width: 35%;
+    margin-top: 30%;
+    font-weight: bold;
+    margin-left: 8%;
+    color: rgb(0, 0, 0); text-shadow: rgb(177, 176, 176) 0.1em 0.1em 0.4em
+}
+button{
+    background: none;
+    color: rgb(88, 86, 197);
+    border: none;
+    font-size: 20px;
+    text-decoration: underline;
+    margin-left: 30%;
+    cursor: pointer;
 }
