--- a/styles/registro.css
+++ b/styles/registro.css
@@ -15,15 +15,22 @@ a:hover {
 
 
 }
-
+.a_login{
+    margin-left: 12%;
+    color: rgb(168, 64, 216);
+}
+body{
+    font-family: sans-serif;
+    
+}
 nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     background: rgb(224, 221, 224);
-    height: 8vh;
-    opacity: 1;
+    height: 7vh;
+    
 }
 
 ul{
@@ -34,125 +41,53 @@ li{
     list-style-type: none;
 }
 
-body{
-    background-color: rgb(100, 127, 168);
-    font-family: Arial, Helvetica, sans-serif;
-}
 .logo{
     font-size:50px;
     text-transform:uppercase;
     letter-spacing:4px;
     position: absolute;
-    left: 5%;
-    top: 9px;
+    margin-right: 90%;
     cursor: pointer;
 }
-div{
-    background-color: #E3EAE0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 160px;
-    border-radius: 40px;
-    color: rgb(255, 240, 252);
-    
-
+#container{
+    display: flex;
+    justify-content: space-around;
 }
-.usuario{
-    background-color: #E3EAE0;
-    position: absolute;
-    top: 22%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 200px;
-    height: 30px;
-    border-bottom: 1px solid  ;
+input{
     border-top: none;
     border-left: none;
     border-right: none;
     outline: none;
-    color: rgb(0, 0, 0);
+    height: 80px;
+    width: 400px;
 }
-.email{
-    background-color: #E3EAE0;
-    position: absolute;
-    top: 38%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 200px;
-    height: 30px;
-    border-bottom: 1px solid  ;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    outline: none;
-    color: rgb(0, 0, 0);
-}
-
-.senha{
-    background-color: #E3EAE0;
-    position: absolute;
-    top: 54%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 200px;
-    height: 30px;
-    border-bottom: 1px solid  ;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    outline: none;
-    color: rgb(0, 0, 0);
-}
-.confirmar{
-    background-color: #E3EAE0;
-    position: absolute;
-    top: 72%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 200px;
-    height: 30px;
-    border-bottom: 1px solid  ;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-        
-    outline: none;
-    color: rgb(0, 0, 0);
-}
-.pnome{
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 15%;
-    left: 62%;
-    width: 100%;
-}
-.pemail{
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 30%;
-    left: 70%;
-    width: 100%;
-}
-p{
-    color: black;
-    font-style: italic;
-    font-size: 32px;
-    font-weight: bold;
-}
-[id = button]{
+.btEnviar{
+    border-bottom: none;
     font-size: 20px;
-    background-color: rgba(77, 58, 58, 0.7);
-    border: none;
-    border-radius: 5px;
-    padding: 20px;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 87%;
-    left: 50%;
-    color: rgba(250, 250, 250, 70);
+    text-transform: uppercase;
     cursor: pointer;
+}
+#parte_esquerda{
+    background-image: linear-gradient(rgb(136, 45, 211), rgb(163, 120, 204));
+    margin-left: -14%;
+    width: 110vh;
+}
+#imgRegistro{
+    height: 700px;
+    width: 700px;
+    margin-left: 15%;
+    margin-top: 15%;
+}
+.tela{
+    margin-left: -89%;
+    border: solid;
+    height: 93vh;
+    border-top: none;
+    border-right: none;
+    border-bottom: none;
+    
+}
 
-
+#form1{
+    margin-left: 20%;
 }
