--- a/styles/sobrenos.css
+++ b/styles/sobrenos.css
@@ -3,6 +3,12 @@
 
     padding: 0;
 }
+.logo{
+    color: black;
+    font-size: 80px;
+    margin-right: 80%;
+    margin-top: -1%;
+}
 
 a{
     color: rgb(0, 0, 0);
@@ -10,175 +16,138 @@ a{
     transition: 0.3s;
 }
 
-a:hover {
+#navbar a:hover {
     opacity:0.7;
 
 
 }
-
-nav{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
-    background: rgb(224, 221, 224);
-    height: 8vh;
-   
+h1{
+    color: rgb(255, 255, 255);
+    font-size: 140px;
+    margin-left: 23%;
+    margin-top: 3%;
+    width: 100%;
+}
+h1:hover{
+    opacity: 0.7;
     
 }
-
-ul{
+#navbar{
     display: flex;
-    flex-flow: row wrap;
+    align-items: center;
+    justify-content: space-around;
+    height: 8vh;
+    background-color: rgb(240, 233, 233);
+}
+body{
+    background-color: rgb(27, 2, 83);
+    font-family: sans-serif;
+}
+.logoMetis{
+    height: 500px;
+    width: 600px;
+    margin-top: 4%;
+    margin-left: 49%;
+}
+#foot-content{
+    display: flex;
+    background-color: rgb(240, 233, 233);
+    height: 10vh;
+    align-items: center;
+    justify-content: space-around;
+    
+}
+#foot-images{
+    justify-content: space-between;
+    display: flex;
+}
+#foot-content a{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 24px;
+    font-family: sans-serif;
+    text-transform:uppercase;
+    letter-spacing:4px;
+
+}
+#container{
+    display: flex;
+}
+
+
+img{
+    height: 20px;
+    width: 20px;
+}
+ul{
+    list-style-type: none;
 }
 li{
     list-style-type: none;
 }
 
-body{
-    background-color: rgb(100, 127, 168);
-    font-family: Arial, Helvetica, sans-serif;
+/*---------------------PANEL 2 ----------------------*/
+
+#panel{
+    background-color: aliceblue;
+    margin-top: 10%;
+    height: 300vh;
+    font-family: 'Kufam';
+    display: flex;
     
 }
-    
-   
-
-  
-
-
-h1{
-    position: absolute;
-    top: 18%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 60px;
-    font-weight: bold;
-
-
+.bloco1{
+    width: 60%;
+    margin-left: 5%;        
 }
-span{
-font-size:200%; 
-color:rgb(0, 0, 0);
-}
-.programadorImg{
-    height: 1300px;
-    width: 1700px;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    opacity: 0.05;
-    
-    top: 51%;
-    left: 50%;
-}
-img {
-    width: 20px;
-    margin-left: 32px;
-    }
 .text1{
-    text-align: center;
-    position: absolute;
-    top: 37%;
-    left: 51%;
-    transform: translate(-50%, -50%);
-    font-size: 30px;
-    font-weight: bold;
-
+    font-size: 60px;
+    color: black;
+    font-weight: 600;
 }
-.colaborar{
-    position: absolute;
-    text-align: center;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    top: 69%;
-    left: 50%;
-    font-weight: bold;
-    font-size: 57px;
+
+#gif_PR{
+    height: 900px;
+    width: 900px;
+    max-height: 700px;
+    max-width: 700px;
+    margin-left: 4%;
+    margin-top: 8%;
+}
+.bloco2{
+    width: 60%;
+    
+    margin-top: 30%;
 }
 .text2{
-    text-align: center;
-    position: absolute;
-    top: 56%;
-    left: 51%;
-    transform: translate(-50%, -50%);
-    font-size: 30px;
-    font-weight: bold;
-
+    font-size: 60px;      
+    color: black;
+    font-weight: 600;
+}
+.colaborar{
+    font-size: 80px;
+    width: 100%;
+    margin-left: 56%;
+    margin-top: 48%;
+    color: black;
+    font-weight: 600;
 }
 .text3{
-    text-align: center;
-    position: absolute;
-    top: 90%;
-    left: 51%;
-    transform: translate(-50%, -50%);
-    font-size: 30px;
-    font-weight: bold;
-
-}
-@media (max-width: 1900px){
-   h1{
-       position: absolute;
-       top: 13%;
-       left: 80%;
-       transform: translate(-50%, -50%);
-       width: 100%;
-   }
-   p{
-       width: 100%;
-       
-   }
-   
-    
-    
-
-   
-}
-@media (max-width: 850px){
-    h1{
-        visibility: hidden;
-        font-size: 25px;
-    }
- }
-
-.logo{
-    font-size:50px;
-    text-transform:uppercase;
-    letter-spacing:4px;
-    position: absolute;
-    left: 5%;
-    top: 1%;
-    cursor: pointer;
-    font-weight: bold;
-}
-footer{
-    position: absolute;
-    top: 110%;
-    left: 0%;
+    font-size: 60px;
     width: 100%;
- }
-[id = abaixo]{
-     display: flex;
-     justify-content: space-around;
-     
-     font-family: Arial, Helvetica, sans-serif;
-     background: rgb(224, 221, 224);
-     height: 12vh;
-     
-} 
-.titlefoot2{
-    font-size: 18px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    position: absolute;
-    left: 35%;
-    top: 41%;
-    position: absolute;
-} 
-.tituloCeap{
-    font-size: 25px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    position: absolute;
-    left: 60%;
-    top: 36%;
+    margin-left: 10%;
+    margin-top: 15%;
     
+    color: black;
+    font-weight: 600;
+}
+.footer_text{
+    font-size: 60px;
+    width: 100%;
+    
+    margin-top: 15%;
+    
+    color: black;
+    font-weight: 600;
 }
