--- a/styles/suporte.css
+++ b/styles/suporte.css
@@ -15,13 +15,18 @@ a:hover {
 
 
 }
-
+.logo{
+    font-size: 38px;
+    text-transform: uppercase;
+    font-family: sans-serif;
+    margin-left: 32%;
+}
 nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
-    background: rgba(224, 221, 224, 1.0);
+    background-color: rgb(224, 221, 224);
     height: 8vh;
 }
 
@@ -31,116 +36,81 @@ ul{
 }
 
 body{
-    background-color: rgb(100, 127, 168);
-    font-family: Arial, Helvetica, sans-serif;
+    background-image: linear-gradient(rgb(136, 45, 211), rgb(163, 120, 204));
+    font-family: sans-serif;
 }
 
 li{
     list-style-type: none;
 }
 footer{
-    background-color:  rgb(255, 240, 252);
-    
-    height: 150px;
-   
-    grid-area: f;
-}
-header{
-   
-    grid-area: h;
-}
-main{
-   
-    grid-area: m;
-}
-button{
-    border: none;
-    background-color: rgba(255, 255, 255, 0.5);
-   
-    
-}
-
-
-
-.logo{
-    font-size:50px;
-    text-transform:uppercase;
-    letter-spacing:4px;
-    position: absolute;
-    left: 5%;
-    top: 8px;
-    cursor: pointer;
+    background-color: rgb(224, 221, 224);
 }
 .imgSuporte{
-    height: 1000px;
-    width: 1100px;
-    transform: translate(-50%, -50%);
-    position: fixed;
-    opacity: 0.03;
-
-    top: 52%;
-    left: 50%;
-    
+    height: 804px;
+    width: 800px;
+    margin-right: 25%;
+    opacity: 0;
+}
+#cont_sup{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
-.container{
-    display: grid;
-    grid-template-columns: 50vh ;
-    grid-template-rows: 10vh 80vh 30vh;
-    grid-template-areas: "h h"
-                          "m m"
-                          
-                          "f f";
-   
 
-}
-.pinture1{
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 52%;
-    left: 30%;
+button{
+    opacity: 0.8;
+    background-color: rgb(255, 255, 255);
     cursor: pointer;
-    padding: 100px;
+    margin-top: 10%;
+    transition: all 0.5s ease-out;
+    border: none;
+    border-radius: 10px;
+    padding: 20px;
 }
-.pinture2{
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 52%;
-    left: 70%;
-    cursor: pointer;
-    padding: 100px;
+button a {
+    font-weight: 700;
+    font-size: 18px;
 }
-
-.pinture1:hover h1{
-    padding: 5px;
-    transition: 1s;
-    
+button:hover{
+    padding: 10%;
+    background-color: rgb(221, 219, 219);
 }
-
-
-.pinture2:hover h1{
-    padding: 5px;
-    transition: 1s;
-   
+.figura2 h1 {
+    margin-top: 2%;
 }
 
-.pinture1:hover p{
-    padding: 1px;
-    transition: 1s;
-    position: static;
-   
+#foot-content a{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 24px;
+    font-family: sans-serif;
+    text-transform:uppercase;
+    letter-spacing:4px;
 }
-.pinture2:hover p{
-    padding:1px;
-    transition: 1s;
-    position: static;
+#foot-content{
+    display: flex;
+    background-color: rgb(224, 221, 224);
+    height: 10vh;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 10%;
 }
-p{
-    width: 100%;
-    font-size: 16px;
-    font-weight: 100;
-    position: absolute;
-    left: -1%;
-    font-weight: bolder;
-    color: rgb(100, 127, 168);
+#foot-images{
+    display: flex;
+    justify-content: space-between;
+}
+#foot-images .iconeFacebook{
+    height: 20px;
+    width: 20px;
+}
+.iconeInstagram{
+    height: 20px;
+    width: 20px;
+}
+.iconeSuporte{
+    height: 20px;
+    width: 20px;
 }
