--- a/styles/metis.css
+++ b/styles/metis.css
@@ -33,7 +33,6 @@ a:hover {
     margin-left: -10%;
 }
 body{
-    background-position: 20%;
 }
 .container{
    display: flex;
@@ -50,6 +49,7 @@ body{
 }
 #content{
     background-image: url(../imgs/imgFundo.png);
+    background-repeat: no-repeat;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -57,16 +57,6 @@ body{
 .nav-list{
     display: flex;
     
-}
-.imagemS{
-    height: 20px;
-    width: 20px;
-    visibility: hidden;
-}
-.imagemH{
-    height: 20px;
-    width: 20px;
-    visibility: hidden;
 }
 .tituloRegistro{
     margin-left: 200%;
@@ -179,4 +169,51 @@ button{
     text-decoration: underline;
     margin-left: 30%;
     cursor: pointer;
+}
+
+/*-----------------RESPONSIVIDADE--------------*/
+
+
+@media (max-width:750px){
+
+    .logo{
+        margin-left: 100%;
+    }
+
+    .tituloRegistro{
+        margin-left: 20%;
+    }
+    .tituloSuporte{
+        margin-left: 50%;
+    }
+
+    .imagem_fundo2{
+        height: 200px;
+        width: 200px;
+        visibility: hidden;
+    }
+    .textoMain{
+        font-size: 40px;
+        width: 100%;
+        
+    }
+    .legendaMain{
+        font-size: 20px;
+    }
+    .text_panel{
+        width: 82%;
+        margin-top: 25%;
+    }
+    button{
+        margin-left: 37%;
+    }
+    #div_img{
+        display: none;
+    }
+    #content{
+        background-position: center;
+    }
+    #foot-content{
+        margin-top: 20%;
+    }
 }
