--- a/styles/suporte.css
+++ b/styles/suporte.css
@@ -16,14 +16,15 @@ a:hover {
 
 }
 .logo{
-    font-size: 38px;
+    font-size: 30px;
     text-transform: uppercase;
+    letter-spacing: 4px;
     font-family: sans-serif;
-    margin-left: 32%;
+    
 }
 nav{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(224, 221, 224);
@@ -46,18 +47,12 @@ li{
 footer{
     background-color: rgb(224, 221, 224);
 }
-.imgSuporte{
-    height: 804px;
-    width: 800px;
-    margin-right: 25%;
-    opacity: 0;
-}
+
 #cont_sup{
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
-
 
 button{
     opacity: 0.8;
@@ -80,6 +75,8 @@ button:hover{
 .figura2 h1 {
     margin-top: 2%;
 }
+
+/*----------------------------------------------------*/
 
 #foot-content a{
     color: rgb(0, 0, 0);
@@ -113,4 +110,13 @@ button:hover{
 .iconeSuporte{
     height: 20px;
     width: 20px;
+}
+
+/*-------------------RESPONSIVO--------------------*/
+
+@media (max-widht:750px){
+    img{
+        height: 40px;
+        width: 40px;
+    }
 }
