--- a/styles/sobrenos.css
+++ b/styles/sobrenos.css
@@ -116,8 +116,8 @@ li{
     margin-top: 8%;
 }
 .bloco2{
-    width: 60%;
-    
+    width: 60vw;
+    margin-left: -10%;
     margin-top: 30%;
 }
 .text2{
@@ -127,20 +127,32 @@ li{
 }
 .colaborar{
     font-size: 80px;
-    width: 100%;
-    margin-left: 56%;
-    margin-top: 48%;
+    width: 100vw;
+    margin-left: -9%;
+    margin-top: 57%;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    
+}
+h3{
+    background-color: rgb(27, 2, 83);
+    width: 400px;
+    height: 170px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#text3{
+    font-size: 60px;
     color: black;
     font-weight: 600;
 }
-.text3{
-    font-size: 60px;
-    width: 100%;
-    margin-left: 10%;
-    margin-top: 15%;
-    
-    color: black;
-    font-weight: 600;
+.parte3{
+    margin-left: 15%;
+    margin-top: 10%;
+    width: 70vw;
+    text-align: center;
+
 }
 .footer_text{
     font-size: 60px;
