--- a/styles/denuncie.css
+++ b/styles/denuncie.css
@@ -25,7 +25,7 @@ a:hover {
     
 }
 body{
-    background-color: rgb(136, 45, 211);
+    background-color: rgb(142, 59, 209);
     font-family: sans-serif;
 }
 nav{
@@ -48,31 +48,31 @@ form{
     
 }
 label{
-    font-size: 58px;
+    font-size: 68px;
     font-weight: 600;
     
-    color: rgb(0, 0, 0);
 }
 
 input[type=text]{
     height: 50px;
-    width: 300px;
+    width: 400px;
     border: none;
     outline: none;
-    margin-left: 35%;
-    
+    margin-left: 30%;
+    border-radius: 2px;
     
 }
 
 input[type=submit]{
-    background-color: rgba(165, 166, 167, 0.3);
-    color: rgb(255, 255, 255);
+    background-color: rgba(213, 214, 216, 0.8);
+    color: rgb(0, 0, 0);
     height: 50px;
     width: 150px;
     border: none;
     font-size: 22px;
     cursor: pointer;
     margin-left: 2%;
+    
     
     
 }
