--- a/styles/login.css
+++ b/styles/login.css
@@ -35,7 +35,7 @@ ul{
     letter-spacing:4px;
 }
 body{
-    background-image: linear-gradient( to right, rgb(136, 45, 211), rgb(158, 120, 194) );
+    background-image: linear-gradient( to right, rgb(175, 175, 170), rgb(131, 133, 105) );
     font-family: sans-serif;
 }
 
@@ -77,6 +77,7 @@ input:focus{
 .btEnviar_login{
     font-size: 18px;
     cursor: pointer;
+    background-color: rgb(187, 189, 186);
 }
 span{
     font-weight: 600;
@@ -84,9 +85,4 @@ span{
 }
 span:hover{
     color: rgb(91, 91, 211);
-}
-p{
-    font-size: 10px;
-    margin-left: 7%;
-    margin-top: 1%;
-}
+} 
