--- a/styles/registro.css
+++ b/styles/registro.css
@@ -3,7 +3,9 @@
 
     padding: 0;
 }
-
+body::-webkit-scrollbar {
+    display: none;  
+}
 a{
     color: rgb(0, 0, 0);
     text-decoration: none;
@@ -14,16 +16,13 @@ a:hover {
     opacity:0.7;
 
 
-}
-.a_login{
-    margin-left: 12%;
-}
+} 
 .a_login:hover{
-    color: blueviolet;
+    color: rgb(143, 146, 96);
 }
 body{
     font-family: sans-serif;
-    
+    background-image: linear-gradient( to right, rgb(175, 175, 170), rgb(131, 133, 105) );
 }
 nav{
     display: flex;
@@ -59,7 +58,10 @@ input{
     border-right: none;
     outline: none;
     height: 80px;
+    background-color: rgb(233, 233, 229);
     width: 400px;
+    opacity: 80%;
+    border: none; 
 }
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
@@ -70,31 +72,19 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 20px;
     text-transform: uppercase;
     cursor: pointer;
-}
-#parte_esquerda{
-    background-image: url("../imgs/fundo_tela.png");
-    margin-left: -14%;
-    width: 101vh;
-    background-repeat: no-repeat;
-    
-}
-#imgRegistro{
-    height: 700px;
-    width: 700px;
-    margin-left: 15%;
-    margin-top: 15%;
-}
-.tela{
-    margin-left: -89%;    
-    height: 93vh;
+    background-color: rgb(249, 250, 249);
+}   
 
-    
+.tela { 
+    margin: auto; 
+    margin-top: 4%;
+    height: 104%; /* Define a largura para controle do layout */  
+    display: flex;
+    justify-content: center; 
+    align-items: center; /* Centraliza horizontalmente */ 
+} 
+
+.a_login{
+    margin-left: 19%;
 }
-
-#form1{
-    margin-left: 20%;
-}
-
-
-
 
