--- a/styles/suporte.css
+++ b/styles/suporte.css
@@ -15,6 +15,9 @@ a:hover {
 
 
 }
+body::-webkit-scrollbar {
+    display: none;  
+}
 .logo{
     font-size: 30px;
     text-transform: uppercase;
@@ -37,7 +40,7 @@ ul{
 }
 
 body{
-    background-image: linear-gradient(rgb(136, 45, 211), rgb(163, 120, 204));
+    background-image: linear-gradient( to right, rgb(175, 175, 170), rgb(131, 133, 105) );
     font-family: sans-serif;
 }
 
