--- a/styles/login.css
+++ b/styles/login.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: linear-gradient(to right, rgb(175, 175, 170), rgb(131, 133, 105));
+    background-color: rgb(240, 233, 233);
     color: #333;
     line-height: 1.6;
 }
@@ -40,7 +40,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 #box_login {
-    background: #fff;
+    background-color: rgb(240, 233, 233);
     padding: 20px 30px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 400px;
