--- a/styles/metis.css
+++ b/styles/metis.css
@@ -93,6 +93,9 @@ body::-webkit-scrollbar {
 .tituloSuporte:hover{
     text-decoration: underline;
 }
+.tituloSup{
+    font-size: 10px;
+}
 img{
     height: 20px;
     width: 20px;
@@ -160,6 +163,36 @@ li{
     margin-left: 9%;
     width: 70%;
 }
+
+
+ 
+.whatsapp-button {
+    position: fixed;
+    left: 24px;
+    bottom: 24px;
+    background: #25D366;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    transition: transform 0.3s, box-shadow 0.3s;
+    z-index: 100;
+}
+
+.whatsapp-button:hover {
+    transform: scale(1.1);
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
+}
+
+.whatsapp-button img {
+    width: 32px;
+    height: 32px;
+    filter: brightness(0) invert(1);
+}
+
 /*----------------------------------------------------------------PAGINA 2-------------------------------------------------------------------*/
 
 #panel_sec {
@@ -176,8 +209,7 @@ li{
     align-items: center; /* Centraliza o texto e o botão horizontalmente */
     font-size: 40px;
     font-family: sans-serif;
-    font-weight: bold;
-    color: rgb(0, 0, 0);
+     color: rgb(0, 0, 0);
     text-shadow: rgb(177, 176, 176) 0.1em 0.1em 0.4em;
     width: 60%; /* Ajusta a largura do texto */
     text-align: center; /* Centraliza o texto */
@@ -186,7 +218,7 @@ li{
 }
 
 #btn1 {
-    background-color: rgb(199, 193, 193);
+    background-color: rgb(240, 233, 233);
     color: rgb(0, 0, 0);
     padding: 40px 20px; /* Maior altura do botão */
     border-radius: 5px;
@@ -209,7 +241,7 @@ li{
 }
   
 #btn2, #btn3 {
-    background-color: rgb(199, 193, 193);
+    background-color: rgb(240, 233, 233);
     color: rgb(0, 0, 0);
     border-radius: 5px;
     font-size: 20px;
