--- a/front/styles/metis.css
+++ b/front/styles/metis.css
@@ -53,7 +53,7 @@ body::-webkit-scrollbar {
     white-space: nowrap;
 }
 #content{
-    background-image: url(../imgs/imgFundo.jpg);
+    background-image: url('../imgs/imgFundo.jpg');
     background-repeat: no-repeat;
     width: 100%;
     height: 84vh;
@@ -305,6 +305,9 @@ li{
     margin-left: auto; /* Posiciona à direita */
 }
 
+.hidden{
+    display: none;
+}
 
 /*-----------------RESPONSIVIDADE--------------*/
 
